fix horizontal scrolling

--- a/css/media.css
+++ b/css/media.css
@@ -36,7 +36,7 @@ a {
 /* -------------------- Navigation -------------------- */
 .navbar-container {
   background-color: #1f2937;
-  width: 100vw;
+  width: 100%;
   height: 50px;
   color: #e5e7eb;
 }
@@ -76,7 +76,7 @@ a {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   height: calc(100vh - 100px);
   padding-top: 50px;
 }
